# auto_vs_finite_diff

./: .gitignore  .travis.yml  CMakeLists.txt  auto_vs_finite.cpp
other/: Makefile  main.cpp
